@@ -3,16 +3,6 @@
   "uniques": 0,
   "views": [
     {
-      "timestamp": "2026-01-29T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-30T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
       "timestamp": "2026-01-31T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -69,6 +59,16 @@
     },
     {
       "timestamp": "2026-02-11T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-12T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-13T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
